# gitl

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  GitHelper.cpp  GitHelper.hpp  ProcessHelper.hpp  main.cpp
src/Framework/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Widget.hpp
src/Models/: BranchModel.cpp  BranchModel.hpp  CMakeLists.txt  CommitFilesModel.cpp  CommitFilesModel.hpp  CommitFilterProxyModel.cpp  CommitFilterProxyModel.hpp  CommitModel.cpp  CommitModel.hpp
src/Widgets/: CMakeLists.txt  ClassTableFilter.cpp  ClassTableFilter.hpp  ClickableCommit.cpp  ClickableCommit.hpp  CommitView.cpp  CommitView.hpp  FileView.cpp  FileView.hpp
